@@ -1,6 +1,7 @@
 10/06/15
   -Fixed single bool array read derp, removed some old code
   -Reworked CIPDataTypes dict
+  -Removed, obsolete functions
   
 10/05/15
   -Fixed multi dim write
